Made the MIND-diet  get started page

--- a/diet-plan.html
+++ b/diet-plan.html
@@ -93,7 +93,7 @@
             <h4>MIND Diet</h4>
             <p>Combines Mediterranean and DASH diets to support brain health.</p>
             <br>
-            <a href="#contact" class="btn">Get Started</a>
+            <a href="Mind-article.html" class="btn">Get Started</a>
           </div>
         </div>
 
