--- a/Flexitarian-article.html
+++ b/Flexitarian-article.html
@@ -56,6 +56,7 @@
         align-items: center;
         justify-content: center;
         gap: 1rem;
+        padding: 2rem 0;
       }
 
       .nav-panel hr {
@@ -65,7 +66,7 @@
       }
 
       .nav-panel ul li {
-        padding: 1rem;
+        padding: 0.5rem;
       }
 
       .nav-panel ul li a {
@@ -371,8 +372,12 @@
                 </li>
                 <li><a href="#conclusion">Conclusion</a></li>
               </div>
+              <div class="line">
+                <hr />
+              </div>
             </ul>
           </div>
+          <script src="script/script.js"></script>
         </div>
       </div>
     </main>
