Added pics to mind diet page

--- a/Mind-article.html
+++ b/Mind-article.html
@@ -167,7 +167,7 @@
           <br />
           <br />
           <h2 id="How">How Does the MIND Diet Work?</h2>
-          <img src="assets/mind-pyramid.jpg" alt="MIND Diet Food Pyramid" />
+          <img src="assets/mind-pyramid.PNG" alt="MIND Diet Food Pyramid" />
           <br />
           <p>
             The MIND diet operates by encouraging nutrient-dense, whole foods
@@ -192,7 +192,7 @@
             Scheduling: How to Get Started with the MIND Diet
           </h2>
           <img
-            src="assets/mind-getting-started.png"
+            src="assets/mind-1.PNG"
             alt="MIND Diet Scheduling"
           />
           <br />
@@ -242,7 +242,7 @@
           <br />
           <h2 id="foods-you-can-eat">Foods You Can Eat on the MIND Diet</h2>
           <img
-            src="assets/mind-foods.jpg"
+            src="assets/mind-2.jpg"
             alt="Foods You Can Eat on the MIND Diet"
           />
           <p>
@@ -311,7 +311,7 @@
           <br />
           <h2 id="foods-to-limit">Foods to Limit or Avoid</h2>
           <img
-            src="assets/mind-avoid.jpg"
+            src="assets/mind-3.jpeg"
             alt="Foods to Limit on the MIND Diet"
           />
           <p>
@@ -348,7 +348,7 @@
           <br />
           <br />
           <h2 id="fun-tips">Fun Tips to Enjoy the MIND Diet</h2>
-          <img src="assets/mind-tips.jpg" alt="MIND Diet Fun Tips" />
+          <img src="assets/mind-4.webp" alt="MIND Diet Fun Tips" />
           <p>Here are some enjoyable ways to embrace the MIND diet:</p>
           <ul>
             <br />
