added css code to make the page more responsive

--- a/Article-dieting_intro.html
+++ b/Article-dieting_intro.html
@@ -105,6 +105,11 @@
           <h1>NourishWise</h1>
           <a href="javascript:void(0)" class="closebtn" onclick="closeNavPanel()">×</a>
         </div>
+        <div class="aside-top">
+          <img src="assets/diet_logo_t.png" alt="">
+          <h1>NourishWise</h1>
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNavPanel()">×</a>
+        </div>
         <li>
           <a href="index-2.html">Home</a>
         </li>
