--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -198,15 +198,51 @@
       cursor: pointer;
     }
 
-    .dietPlan-card button:hover {
-      background-color: darkred;
-    }
-
     .top {
       display: flex;
       align-items: center;
       height: fit-content;
       flex-direction: row;
+    }
+
+    /* display image bg */
+    #dashboard,
+    #logout,
+    #setting,
+    #home {
+      position: relative;
+      background-image: url(./assets/contact-us.jpeg);
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 100vh;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #logout::before,
+    #setting::before,
+    #home::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+
+    #logout>*,
+    #setting>*,
+    #home>* {
+      position: relative;
+      z-index: 2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   </style>
 </head>
@@ -368,7 +404,7 @@
 
     <!-- Setting section -->
     <section id="setting" class="content-section" style="display: none;">
-            <span style="font-size:30px;cursor:pointer" onclick="openNavPanel()">☰</span>
+      <span style="font-size:30px;cursor:pointer" onclick="openNavPanel()">☰</span>
 
       <h2>Here you can add or change you user profile picture</h2>
       <div class="profile-container">
