--- a/diet-plan.html
+++ b/diet-plan.html
@@ -1,226 +1,276 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NourishWise - Diet Plan</title>
+    <link rel="icon" href="assets/diet_logo_t.png" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NourishWise - Diet Plan</title>
-  <link rel="icon" href="assets/diet_logo_t.png">
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/diet-plan.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
 
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/diet-plan.css">
-  <link rel="stylesheet" href="styles/responsive.css" />
+    <!-- Fontawesome Icon link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6"
+      crossorigin="anonymous"
+    />
 
-  <!-- Fontawesome Icon link -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6" crossorigin="anonymous" />
+    <!-- SwiperJS CSS link -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+    />
 
-  <!-- SwiperJS CSS link -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <!-- AOS CSS for animations -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
-  <!-- AOS CSS for animations -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  </head>
 
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-</head>
-
-<body>
-  <header id="header">
-    <nav>
-      <div class="logo">
-        <img src="assets/diet_logo_t.png" alt="NourishWise logo">
-      </div>
-      <ul class="nav-list" id="nav-list">
-        <div class="aside-top">
-          <img src="assets/diet_logo_t.png" alt="">
-          <h1>NourishWise</h1>
-          <a href="javascript:void(0)" class="closebtn" onclick="closeNavPanel()">×</a>
+  <body>
+    <header id="header">
+      <nav>
+        <div class="logo">
+          <img src="assets/diet_logo_t.png" alt="NourishWise logo" />
         </div>
-        <li><a href="index-2.html">Home</a></li>
-        <li><a href="#" id="active">Diet Plan</a></li>
-        <li><a href="insight.html">Insights</a></li>
-        <li><a href="dieticians.html">Dieticians</a></li>
-        <li><a href="contactUs.html" class="btn">Contact Us</a></li>
-      </ul>
-      <div class="action-btn-container">
-        <a href="customer-dashboard.html" class="user-profile">
-          <img class="profileImage" src="" class="profile-pic" alt="Profile Picture"
-            style="width: 50px; height: 50px;" />
-        </a>
-        <div class="menu-toggle">
-          <span style="font-size:30px;cursor:pointer" onclick="openNavPanel()">☰</span>
-        </div>
-      </div>
-    </nav>
-  </header>
-
-  <main id="dietPlan-mainContainer">
-    <!-- =========================== DIET PLAN SECTION ===========================-->
-    <section class="container dietPlan">
-      <header>
-        <h2>Our Diet Plans</h2>
-        <p>Discover personalized diet plans tailored to your health needs and lifestyle. Whether you're looking to lose
-          weight, build muscle, or simply eat healthier, we have a plan for you.</p>
-      </header>
-
-      <!-- Features List container -->
-      <div class="dietPlan-list" data-aos="zoom-in-up">
-        <!-- Feature card -->
-        <div class="dietPlan-card">
-          <div class="img">
-            <img src="assets/dash-diet.jpeg" alt="">
+        <ul class="nav-list" id="nav-list">
+          <div class="aside-top">
+            <img src="assets/diet_logo_t.png" alt="" />
+            <h1>NourishWise</h1>
+            <a
+              href="javascript:void(0)"
+              class="closebtn"
+              onclick="closeNavPanel()"
+              >×</a
+            >
           </div>
-          <div class="text">
-            <h4>DASH Diet</h4>
-            <p>Low-salt, nutrient-rich diet aimed at lowering blood pressure.</p>
-            <br>
-            <a href="Dash-article.html" class="btn">Get Started</a>
-          </div>
-        </div>
-
-        <!-- Feature card -->
-        <div class="dietPlan-card">
-          <div class="img">
-            <img src="assets/flax-diet.jpg" alt="">
-          </div>
-          <div class="text">
-            <h4>Flexitarian Diet</h4>
-            <p>Primarily plant-based diet with occasional meat or fish.</p>
-            <br>
-            <a href="Flexitarian-article.html" class="btn">Get Started</a>
-          </div>
-        </div>
-
-        <!-- Diet Plan card -->
-        <div class="dietPlan-card">
-          <div class="img"><img src="assets/mind-diet.jpg" alt=""></div>
-          <div class="text">
-            <h4>MIND Diet</h4>
-            <p>Combines Mediterranean and DASH diets to support brain health.</p>
-            <br>
-            <a href="Mind-article.html" class="btn">Get Started</a>
-          </div>
-        </div>
-
-        <!-- Diet Plan card -->
-        <div class="dietPlan-card">
-          <div class="img"><img src="assets/fruit-diet.jpeg" alt=""></div>
-          <div class="text">
-            <h3>Fruitarian Diet</h3>
-            <p>Diet primarily of raw fruits, with limited nuts and seeds.</p>
-            <br>
-            <a href="#contact" class="btn">Get Started</a>
-          </div>
-        </div>
-
-        <!-- Diet Plan card -->
-        <div class="dietPlan-card">
-          <div class="img"><img src="assets/Keto-Diet.jpg" alt=""></div>
-          <div class="text">
-            <h3>Keto Diet</h3>
-            <p>High-fat, low-carb meals to help your body enter ketosis.</p>
-            <br>
-            <a href="#contact" class="btn">Get Started</a>
-          </div>
-        </div>
-
-        <!-- Diet Plan card -->
-        <div class="dietPlan-card">
-          <div class="img"><img src="assets/Mediterranean-diet.jpeg" alt=""></div>
-          <div class="text">
-            <h3>Mediterranean Diet</h3>
-            <p>Rich in fruits, vegetables, and healthy fats for a balanced lifestyle.</p>
-            <br>
-            <a href="#contact" class="btn">Get Started</a>
-          </div>
-        </div>
-
-        <!-- Diet Plan card -->
-        <div class="dietPlan-card">
-          <div class="img">
-            <img src="assets/vegan-diet.jpeg" alt="Vegan Diet">
-          </div>
-          <div class="text">
-            <h3>Vegan Diet</h3>
-            <p>Plant-based meals to support your cruelty-free lifestyle.</p>
-            <br>
-            <a href="#contact" class="btn">Get Started</a>
-          </div>
-        </div>
-
-        <!-- Diet Plan card -->
-        <div class="dietPlan-card">
-          <div class="img"><img src="assets/weight-loss.jpeg" alt=""></div>
-          <div class="text">
-            <h3>Create Your Own!</h3>
-            <p>Create your own personalized plan!</p>
-            <br>
-            <a href="personal-dietPlan.html" class="btn">Create +</a>
-          </div>
-        </div>
-      </div>
-      <!-- <a href="diet-plan.html" class="btn">Explore More</a> -->
-    </section>
-
-    <!-- Footer Section -->
-    <footer class="footer">
-      <div class="footer-content">
-        <p>&copy; 2024 NourishWise. All rights reserved.</p>
-        <ul class="footer-links">
-          <li><a href="privacy.html">Privacy Policy</a></li>
-          <li><a href="terms.html">Terms of Service</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="index-2.html">Home</a></li>
+          <li><a href="#" id="active">Diet Plan</a></li>
+          <li><a href="insight.html">Insights</a></li>
+          <li><a href="dieticians.html">Dieticians</a></li>
+          <li><a href="contactUs.html" class="btn">Contact Us</a></li>
         </ul>
-      </div>
-      <div class="social-media">
-        <a href="https://linkedin.com" target="_blank" class="fab fa-linkedin"></a>
-        <a href="https://wa.me/" target="_blank" class="fab fa-whatsapp"></a>
-        <a href="https://facebook.com" target="_blank" class="fab fa-facebook"></a>
-        <a href="https://twitter.com" target="_blank" class="fab fa-twitter"></a>
-        <a href="https://instagram.com" target="_blank" class="fab fa-instagram"></a>
-      </div>
-    </footer>
+        <div class="action-btn-container">
+          <a href="customer-dashboard.html" class="user-profile">
+            <img
+              class="profileImage"
+              src=""
+              class="profile-pic"
+              alt="Profile Picture"
+              style="width: 50px; height: 50px"
+            />
+          </a>
+          <div class="menu-toggle">
+            <span
+              style="font-size: 30px; cursor: pointer"
+              onclick="openNavPanel()"
+              >☰</span
+            >
+          </div>
+        </div>
+      </nav>
+    </header>
 
+    <main id="dietPlan-mainContainer">
+      <!-- =========================== DIET PLAN SECTION ===========================-->
+      <section class="container dietPlan">
+        <header>
+          <h2>Our Diet Plans</h2>
+          <p>
+            Discover personalized diet plans tailored to your health needs and
+            lifestyle. Whether you're looking to lose weight, build muscle, or
+            simply eat healthier, we have a plan for you.
+          </p>
+        </header>
 
-    <script src="script/script.js"></script>
+        <!-- Features List container -->
+        <div class="dietPlan-list" data-aos="zoom-in-up">
+          <!-- Feature card -->
+          <div class="dietPlan-card">
+            <div class="img">
+              <img src="assets/dash-diet.jpeg" alt="" />
+            </div>
+            <div class="text">
+              <h4>DASH Diet</h4>
+              <p>
+                Low-salt, nutrient-rich diet aimed at lowering blood pressure.
+              </p>
+              <br />
+              <a href="Dash-article.html" class="btn">Get Started</a>
+            </div>
+          </div>
 
-    <!-- fontawesome JS -->
-    <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script>
-    <!-- JavaScript for Swiper, AOS, and other interactive elements -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script>
-      AOS.init();
-      const swiper = new Swiper('.main-swiper', {
-        loop: true,
-        slidesPerView: 1,
-        pagination: {
-          el: '.swiper-pagination',
-          clickable: true,
-        },
-        navigation: {
-          nextEl: '.swiper-button-next',
-          prevEl: '.swiper-button-prev',
-        },
-      });
-    </script>
+          <!-- Feature card -->
+          <div class="dietPlan-card">
+            <div class="img">
+              <img src="assets/flax-diet.jpg" alt="" />
+            </div>
+            <div class="text">
+              <h4>Flexitarian Diet</h4>
+              <p>Primarily plant-based diet with occasional meat or fish.</p>
+              <br />
+              <a href="Flexitarian-article.html" class="btn">Get Started</a>
+            </div>
+          </div>
 
-    <script>
-      // Function to load and display the profile picture from localStorage
-      function loadProfilePicture() {
-        const storedImage = localStorage.getItem("profilePic");
-        const profileImages = document.querySelectorAll(".profileImage");
+          <!-- Diet Plan card -->
+          <div class="dietPlan-card">
+            <div class="img"><img src="assets/mind-diet.jpg" alt="" /></div>
+            <div class="text">
+              <h4>MIND Diet</h4>
+              <p>
+                Combines Mediterranean and DASH diets to support brain health.
+              </p>
+              <br />
+              <a href="Mind-article.html" class="btn">Get Started</a>
+            </div>
+          </div>
 
-        if (storedImage) {
-          profileImages.forEach(img => img.src = storedImage);
-        } else {
-          profileImages.forEach(img => img.src = "default-profile.png"); // Set a default image if none is stored
+          <!-- Diet Plan card -->
+          <div class="dietPlan-card">
+            <div class="img"><img src="assets/fruit-diet.jpeg" alt="" /></div>
+            <div class="text">
+              <h3>Fruitarian Diet</h3>
+              <p>Diet primarily of raw fruits, with limited nuts and seeds.</p>
+              <br />
+              <a href="fruit-diet.html" class="btn">Get Started</a>
+            </div>
+          </div>
+
+          <!-- Diet Plan card -->
+          <div class="dietPlan-card">
+            <div class="img"><img src="assets/Keto-Diet.jpg" alt="" /></div>
+            <div class="text">
+              <h3>Keto Diet</h3>
+              <p>High-fat, low-carb meals to help your body enter ketosis.</p>
+              <br />
+              <a href="#contact" class="btn">Get Started</a>
+            </div>
+          </div>
+
+          <!-- Diet Plan card -->
+          <div class="dietPlan-card">
+            <div class="img">
+              <img src="assets/Mediterranean-diet.jpeg" alt="" />
+            </div>
+            <div class="text">
+              <h3>Mediterranean Diet</h3>
+              <p>
+                Rich in fruits, vegetables, and healthy fats for a balanced
+                lifestyle.
+              </p>
+              <br />
+              <a href="#contact" class="btn">Get Started</a>
+            </div>
+          </div>
+
+          <!-- Diet Plan card -->
+          <div class="dietPlan-card">
+            <div class="img">
+              <img src="assets/vegan-diet.jpeg" alt="Vegan Diet" />
+            </div>
+            <div class="text">
+              <h3>Vegan Diet</h3>
+              <p>Plant-based meals to support your cruelty-free lifestyle.</p>
+              <br />
+              <a href="#contact" class="btn">Get Started</a>
+            </div>
+          </div>
+
+          <!-- Diet Plan card -->
+          <div class="dietPlan-card">
+            <div class="img"><img src="assets/weight-loss.jpeg" alt="" /></div>
+            <div class="text">
+              <h3>Create Your Own!</h3>
+              <p>Create your own personalized plan!</p>
+              <br />
+              <a href="personal-dietPlan.html" class="btn">Create +</a>
+            </div>
+          </div>
+        </div>
+        <!-- <a href="diet-plan.html" class="btn">Explore More</a> -->
+      </section>
+
+      <!-- Footer Section -->
+      <footer class="footer">
+        <div class="footer-content">
+          <p>&copy; 2024 NourishWise. All rights reserved.</p>
+          <ul class="footer-links">
+            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="terms.html">Terms of Service</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="social-media">
+          <a
+            href="https://linkedin.com"
+            target="_blank"
+            class="fab fa-linkedin"
+          ></a>
+          <a href="https://wa.me/" target="_blank" class="fab fa-whatsapp"></a>
+          <a
+            href="https://facebook.com"
+            target="_blank"
+            class="fab fa-facebook"
+          ></a>
+          <a
+            href="https://twitter.com"
+            target="_blank"
+            class="fab fa-twitter"
+          ></a>
+          <a
+            href="https://instagram.com"
+            target="_blank"
+            class="fab fa-instagram"
+          ></a>
+        </div>
+      </footer>
+
+      <script src="script/script.js"></script>
+
+      <!-- fontawesome JS -->
+      <script
+        src="https://kit.fontawesome.com/f70dd16b18.js"
+        crossorigin="anonymous"
+      ></script>
+      <!-- JavaScript for Swiper, AOS, and other interactive elements -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+      <script>
+        AOS.init();
+        const swiper = new Swiper(".main-swiper", {
+          loop: true,
+          slidesPerView: 1,
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          },
+          navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+          },
+        });
+      </script>
+
+      <script>
+        // Function to load and display the profile picture from localStorage
+        function loadProfilePicture() {
+          const storedImage = localStorage.getItem("profilePic");
+          const profileImages = document.querySelectorAll(".profileImage");
+
+          if (storedImage) {
+            profileImages.forEach((img) => (img.src = storedImage));
+          } else {
+            profileImages.forEach((img) => (img.src = "default-profile.png")); // Set a default image if none is stored
+          }
         }
-      }
 
-      // Load the profile picture when the page loads
-      document.addEventListener("DOMContentLoaded", loadProfilePicture);
-    </script>
-</body>
-
+        // Load the profile picture when the page loads
+        document.addEventListener("DOMContentLoaded", loadProfilePicture);
+      </script>
+    </main>
+  </body>
 </html>
