Adding keto diet plan

--- a/diet-plan.html
+++ b/diet-plan.html
@@ -137,7 +137,7 @@
               <h3>Fruitarian Diet</h3>
               <p>Diet primarily of raw fruits, with limited nuts and seeds.</p>
               <br />
-              <a href="fruit-diet.html" class="btn">Get Started</a>
+              <a href="fruitarian.html" class="btn">Get Started</a>
             </div>
           </div>
 
@@ -148,7 +148,7 @@
               <h3>Keto Diet</h3>
               <p>High-fat, low-carb meals to help your body enter ketosis.</p>
               <br />
-              <a href="#contact" class="btn">Get Started</a>
+              <a href="keto-article.html" class="btn">Get Started</a>
             </div>
           </div>
 
