--- a/fruitarian.html
+++ b/fruitarian.html
@@ -154,7 +154,6 @@
       </nav>
     </header>
 
-    ```html
     <main>
       <div class="container article-container">
         <div class="article">
@@ -163,7 +162,7 @@
             <h1>Fruitarian Diet</h1>
             <br />
             <img
-              src="assets/fruitarian-diet.jpg"
+              src="assets/fruit-diet.jpeg"
               alt="A variety of fruits arranged beautifully on a platter"
             />
             <h2>What is the Fruitarian Diet?</h2>
@@ -204,7 +203,7 @@
           <br />
           <h2 id="how-it-works">How Does the Fruitarian Diet Work?</h2>
           <img
-            src="assets/fruitarian-pyramid.jpg"
+            src="assets/fruit-pyramid.jfif"
             alt="Fruitarian food pyramid illustration"
           />
           <br />
