Adding mediterranean & vegan diet plan

--- a/diet-plan.html
+++ b/diet-plan.html
@@ -164,7 +164,7 @@
                 lifestyle.
               </p>
               <br />
-              <a href="#contact" class="btn">Get Started</a>
+              <a href="mediterranean-article.html" class="btn">Get Started</a>
             </div>
           </div>
 
@@ -177,7 +177,7 @@
               <h3>Vegan Diet</h3>
               <p>Plant-based meals to support your cruelty-free lifestyle.</p>
               <br />
-              <a href="#contact" class="btn">Get Started</a>
+              <a href="vegan-article.html" class="btn">Get Started</a>
             </div>
           </div>
 
