--- a/mediterranean-article.html
+++ b/mediterranean-article.html
@@ -150,249 +150,259 @@
         <div class="article">
           <article id="intro">
             <!-- <img src="assets/diet_logo_t.png" alt=""> -->
-            <h1>DASH Diet:</h1>
+            <h1>Mediterranean Diet</h1>
             <br />
-            <img src="assets/dash-diet.jpeg" alt="" />
-            <h2>Understanding the DASH Diet</h2>
+            <img
+              src="assets/mediterranean-diet.jpg"
+              alt="A colorful assortment of Mediterranean foods including vegetables, fish, and olive oil"
+            />
+            <h2>What is the Mediterranean Diet?</h2>
             <p>
-              Welcome to the world of the DASH diet—a vibrant, delicious
-              approach to eating that not only tantalizes your taste buds but
-              also promotes heart health and overall well-being. Whether you're
-              looking to lower your blood pressure, improve your nutrition, or
-              just want to eat better, DASH (Dietary Approaches to Stop
-              Hypertension) has you covered. So, grab a snack (preferably
-              healthy!) and let’s dive in!
+              The Mediterranean diet is inspired by the traditional eating
+              habits of countries bordering the Mediterranean Sea, such as
+              Greece, Italy, and Spain. This diet emphasizes whole foods like
+              vegetables, fruits, whole grains, legumes, nuts, and lean
+              proteins, especially fish. Known for its health benefits, the
+              Mediterranean diet is as delicious as it is nutritious, offering a
+              balanced approach that supports heart health and longevity.
             </p>
             <br />
             <br />
-            <h2>What is the DASH Diet?</h2>
+            <h2 id="benefits">The Benefits of the Mediterranean Diet</h2>
             <p>
-              At its core, the DASH diet emphasizes wholesome, nutrient-rich
-              foods that can help you reduce your sodium intake and manage
-              hypertension (high blood pressure). Developed by the National
-              Heart, Lung, and Blood Institute (NHLBI), the DASH diet isn't just
-              about cutting back on salt—it's a lifestyle change that focuses on
-              eating a balanced diet rich in fruits, vegetables, whole grains,
-              lean proteins, and healthy fats.
+              The Mediterranean diet is praised for its heart-health benefits,
+              with studies linking it to reduced risks of cardiovascular
+              diseases, diabetes, and stroke. The diet is rich in healthy fats
+              from olive oil, omega-3 fatty acids from fish, and a wealth of
+              antioxidants from fresh vegetables and fruits. These nutrients
+              collectively work to improve cholesterol levels, reduce
+              inflammation, and support brain health, making it one of the most
+              beneficial diets for long-term well-being.
             </p>
             <br />
             <p>
-              Think of the DASH diet as a colorful plate filled with a variety
-              of foods. It’s not about deprivation; instead, it’s all about
-              making healthier choices that you can enjoy. The idea is to
-              nourish your body while also satisfying your cravings. Sounds
-              good, right?
+              Furthermore, its high fiber content aids digestion and promotes
+              satiety, helping maintain a healthy weight. The diet also
+              encourages mindful eating, with an emphasis on enjoying meals with
+              family and friends, which contributes to overall happiness and a
+              balanced lifestyle.
             </p>
           </article>
           <br />
           <br />
-          <h2 id="How">How Does the DASH Diet Work?</h2>
-          <img src="assets/dash-pyramid.jpg" alt="" />
+          <h2 id="how-it-works">How Does the Mediterranean Diet Work?</h2>
+          <img
+            src="assets/mediterranean-pyramid.jpg"
+            alt="Mediterranean food pyramid illustration"
+          />
           <br />
           <p>
-            The DASH diet works by promoting foods that are naturally low in
-            sodium and high in potassium, calcium, and magnesium—all essential
-            nutrients for heart health. By incorporating more fruits,
-            vegetables, whole grains, and low-fat dairy into your meals, you can
-            naturally lower your blood pressure and improve your cardiovascular
-            health.
+            The Mediterranean diet follows a simple principle: focus on whole,
+            plant-based foods and healthy fats while limiting processed foods,
+            red meats, and refined sugars. Meals are built around vegetables,
+            fruits, grains, legumes, and fish, with small amounts of dairy,
+            poultry, and meat enjoyed occasionally. Olive oil is the primary
+            source of added fat, enhancing flavor while offering
+            heart-protective monounsaturated fats.
           </p>
           <br />
           <p>
-            The magic of the DASH diet lies in its flexibility. You can
-            customize it to fit your personal preferences, making it easier to
-            stick to in the long run. Plus, it encourages a variety of flavors
-            and textures, so you’ll never feel bored with your meals!
+            Meal structure varies based on personal preference and availability,
+            but the diet encourages enjoying food slowly and with others,
+            promoting both physical and social well-being.
           </p>
           <br />
           <br />
-          <h2 id="started">Scheduling: How to Get Started with DASH</h2>
-          <img src="assets/dash.PNG" alt="" />
+          <h2 id="getting-started">
+            Getting Started with the Mediterranean Diet
+          </h2>
+          <img
+            src="assets/mediterranean-plate.jpg"
+            alt="Plate with Mediterranean-inspired ingredients like olives, fish, and vegetables"
+          />
           <br />
           <p>
-            Starting the DASH diet doesn’t have to be overwhelming. Here’s a
-            simple guide to help you ease into this healthier lifestyle:
+            Ready to dive into the Mediterranean lifestyle? Here are some tips
+            to get started:
           </p>
           <ul>
             <br />
             <li>
-              1. <strong>Set Your Goals:</strong> Determine what you want to
-              achieve with the DASH diet—whether it’s lowering blood pressure,
-              losing weight, or simply eating healthier.
+              1. <strong>Fill Your Plate with Vegetables:</strong> Aim to
+              include a variety of colorful vegetables with every meal for
+              optimal nutrition.
             </li>
             <br />
             <li>
-              2. <strong>Plan Your Meals:</strong> Start by creating a meal plan
-              for the week. Include a variety of foods from different food
-              groups to keep your meals exciting.
+              2. <strong>Choose Healthy Fats:</strong> Incorporate olive oil as
+              your main fat source, and add nuts, seeds, and avocados for
+              additional healthy fats.
             </li>
             <br />
             <li>
-              3. <strong>Grocery Shopping:</strong> Stock up on DASH-friendly
-              foods. Make a list to avoid impulse buys that can derail your
-              healthy eating habits
+              3. <strong>Eat More Fish:</strong> Include fish in your meals
+              twice a week, especially fatty fish like salmon, which are rich in
+              omega-3s.
             </li>
             <br />
             <li>
-              4. <strong>Prep Your Meals:</strong> Meal prep can save you time
-              during busy weekdays. Chop veggies, cook grains, and prepare
-              snacks in advance so you have healthy options ready to go.
+              4. <strong>Limit Red Meat:</strong> Save red meat for special
+              occasions and focus on lean proteins like poultry and legumes
+              instead.
             </li>
             <br />
             <li>
-              5. <strong>Mindful Eating:</strong>Pay attention to portion sizes
-              and savor each bite. Mindful eating can help you enjoy your food
-              and recognize when you're full.
-            </li>
-            <br />
-            <li>
-              6. <strong>Track your journey:</strong> This is where NourishWise
-              comes in, make sure to log in your daily meals and calorie intake
-              as often as possible. Tracking your progression, or even
-              regression, helps to not only keep you motivated and accountable,
-              but helps you notice any missteps to be able to solve them early.
+              5. <strong>Savor Every Bite:</strong> Embrace the Mediterranean
+              approach by enjoying meals slowly and mindfully, preferably with
+              family or friends.
             </li>
           </ul>
-
           <br />
           <br />
-          <h2 id="foods-you-can-eat">Foods You Can Eat on the DASH Diet</h2>
-          <img src="assets/dash-2.webp" alt="" />
-          <p>Embrace the following food groups as part of your DASH journey:</p>
+          <h2 id="foods-you-can-eat">
+            Foods You Can Eat on the Mediterranean Diet
+          </h2>
+          <img
+            src="assets/mediterranean-selection.jpg"
+            alt="Selection of Mediterranean diet foods including grains, vegetables, and olive oil"
+          />
+          <p>Enjoy these staples in your Mediterranean-inspired meals:</p>
           <ul>
             <br />
             <li>
-              1. <strong>Fruits and Vegetables:</strong> Aim for 4-5 servings of
-              each per day. Think berries, apples, leafy greens, carrots, and
-              bell peppers.
+              1. <strong>Fresh Vegetables:</strong> Leafy greens, tomatoes, bell
+              peppers, and cucumbers.
             </li>
             <br />
             <li>
-              2. <strong>Whole Grains:</strong> Choose whole-grain bread, brown
-              rice, quinoa, and oatmeal. Aim for 6-8 servings a day.
+              2. <strong>Fruits:</strong> Oranges, grapes, figs, and berries.
             </li>
             <br />
             <li>
-              3. <strong>Lean Proteins:</strong> Incorporate fish, poultry,
-              beans, lentils, and tofu. Aim for 2 or fewer servings of meat per
-              day.
+              3. <strong>Whole Grains:</strong> Quinoa, barley, oats, and
+              whole-wheat bread.
             </li>
             <br />
             <li>
-              4. <strong>Low-Fat Dairy:</strong> Enjoy yogurt, milk, and cheese,
-              aiming for 2-3 servings each day.
+              4. <strong>Healthy Fats:</strong> Olive oil, nuts, seeds, and
+              avocados.
             </li>
             <br />
             <li>
-              5. <strong>Nuts and Seeds:</strong> Snack on unsalted nuts and
-              seeds, keeping it to about 4-5 servings per week.
-            </li>
-            <br />
-            <li>
-              6. <strong>Healthy Fats:</strong> Use healthy oils like olive oil,
-              and limit saturated and trans fats.
+              5. <strong>Lean Proteins:</strong> Fish, legumes, and occasional
+              poultry.
             </li>
           </ul>
           <br />
           <br />
           <h2 id="foods-to-limit">Foods to Limit or Avoid</h2>
-          <img src="assets/dash-3.jpeg" alt="" />
+          <img
+            src="assets/foods-to-limit.jpg"
+            alt="Foods to limit on the Mediterranean diet"
+          />
           <p>
-            While the DASH diet is about enjoying a variety of foods, there are
-            some items you should limit or avoid:
+            Minimize or avoid these foods for a true Mediterranean experience:
           </p>
           <ul>
             <br />
             <li>
-              1. <strong>Salt:</strong> Aim for no more than 2,300 mg of sodium
-              per day, or ideally 1,500 mg if you have high blood pressure.
+              1. <strong>Processed Foods:</strong> Limit snacks and meals high
+              in artificial ingredients and preservatives.
             </li>
             <br />
             <li>
-              2. <strong>Added Sugars:</strong> Cut back on sugary beverages,
-              desserts, and processed snacks.
+              2. <strong>Red Meat:</strong> Enjoy in moderation or only
+              occasionally.
             </li>
             <br />
             <li>
-              3. <strong>Red and Processed Meats:</strong> Limit these to less
-              than 6 ounces per week.
+              3. <strong>Refined Grains:</strong> Replace white bread, pasta,
+              and rice with whole-grain options.
             </li>
             <br />
             <li>
-              4. <strong>Full-Fat Dairy:</strong> Choose low-fat or fat-free
-              options instead.
-            </li>
-            <br />
-            <li>
-              5. <strong>High-Fat and Fried Foods:</strong> These can contribute
-              to higher blood pressure and are best limited.
+              4. <strong>Sugary Sweets:</strong> Reduce intake of sweets and
+              desserts; choose fresh fruit instead.
             </li>
           </ul>
           <br />
           <br />
-          <h2 id="fun-tips">Fun Tips to Enjoy the DASH Diet</h2>
-          <img src="assets/dash-4.jpeg" alt="" />
-          <p>Here are some enjoyable ways to embrace the DASH diet:</p>
+          <h2 id="fun-tips">Fun Tips to Enjoy the Mediterranean Diet</h2>
+          <img
+            src="assets/mediterranean-dishes.jpg"
+            alt="Assortment of Mediterranean-inspired dishes"
+          />
+          <p>
+            Enjoy the Mediterranean lifestyle with these fun and delicious tips:
+          </p>
           <ul>
             <br />
             <li>
-              1. <strong>Experiment with Herbs and Spices:</strong> Instead of
-              salt, enhance your dishes with flavorful herbs and spices.
+              1. <strong>Try New Recipes:</strong> Explore Mediterranean recipes
+              like Greek salads, hummus, and fish stew.
             </li>
             <br />
             <li>
-              2. <strong>Join a Cooking Class:</strong> Learn new ways to
-              prepare DASH-friendly meals while having fun.
+              2. <strong>Make Homemade Snacks:</strong> Enjoy olives, nuts, and
+              fresh fruit as nutritious snacks.
             </li>
             <br />
             <li>
-              3. <strong>Make it Social:</strong> Share your DASH journey with
-              friends and family. Host a healthy potluck or dinner party!
+              3. <strong>Experiment with Herbs and Spices:</strong> Use flavors
+              like oregano, basil, and thyme to add Mediterranean flair to your
+              meals.
             </li>
             <br />
             <li>
-              4. <strong>Keep it Colorful:</strong> A colorful plate often means
-              a variety of nutrients. Aim to eat the rainbow!
+              4. <strong>Focus on Freshness:</strong> Opt for fresh, seasonal
+              ingredients for the best flavors.
             </li>
           </ul>
           <br />
           <br />
           <h2 id="conclusion">Conclusion</h2>
           <p>
-            Embarking on the DASH diet is about more than just food; it’s a
-            lifestyle change that can lead to better health and a happier you.
-            With its focus on whole foods and balanced nutrition, the DASH diet
-            can help you feel your best while enjoying a diverse array of
-            delicious meals.
-            <br />
-            So, what are you waiting for? Dive into the world of DASH, savor
-            every bite, and watch as you take strides toward a healthier life.
-            Remember, it’s not just about the destination; it’s about enjoying
-            the journey along the way!
+            The Mediterranean diet provides a balanced, flavorful, and
+            health-promoting way to eat, focusing on whole foods and healthy
+            fats. With its emphasis on fresh ingredients and mindful eating, the
+            Mediterranean lifestyle offers both physical and mental benefits. If
+            you’re ready to nourish your body and enjoy vibrant, wholesome
+            meals, the Mediterranean diet may be the perfect fit!
           </p>
 
           <div class="nav-panel">
             <ul>
               <div class="lists">
-                <li><a href="#intro">Introduction: What is Dieting?</a></li>
-                <li><a href="#How">How Does the DASH Diet Work?</a></li>
                 <li>
-                  <a href="#started"
-                    >Scheduling: How to Get Started with DASH</a
+                  <a href="#intro"
+                    >Introduction: What is the Mediterranean Diet?</a
+                  >
+                </li>
+                <li>
+                  <a href="#benefits">The Benefits of the Mediterranean Diet</a>
+                </li>
+                <li>
+                  <a href="#how-it-works"
+                    >How Does the Mediterranean Diet Work?</a
+                  >
+                </li>
+                <li>
+                  <a href="#getting-started"
+                    >Getting Started with the Mediterranean Diet</a
                   >
                 </li>
                 <li>
                   <a href="#foods-you-can-eat"
-                    >Foods You Can Eat on the DASH Diet</a
+                    >Foods You Can Eat on the Mediterranean Diet</a
                   >
                 </li>
+                <li><a href="#foods-to-limit">Foods to Limit or Avoid</a></li>
                 <li>
-                  <a href="#foods-to-limit">Foods to Limit or Avoid</a>
+                  <a href="#fun-tips"
+                    >Fun Tips to Enjoy the Mediterranean Diet</a
+                  >
                 </li>
-                <li>
-                  <a href="#fun-tips">Fun Tips to Enjoy the DASH Diet</a>
-                </li>
-                <li><a href="#conclusion">Conclusion.</a></li>
+                <li><a href="#conclusion">Conclusion</a></li>
               </div>
               <div class="line">
                 <hr />
