finishing Fruitatian diet plan

--- a/fruitarian.html
+++ b/fruitarian.html
@@ -65,7 +65,7 @@
       }
 
       .nav-panel ul li {
-        padding: 1rem;
+        padding: 0.5rem;
       }
 
       .nav-panel ul li a {
@@ -203,7 +203,7 @@
           <br />
           <h2 id="how-it-works">How Does the Fruitarian Diet Work?</h2>
           <img
-            src="assets/fruit-pyramid.jfif"
+            src="assets/fruit-1.jpg"
             alt="Fruitarian food pyramid illustration"
           />
           <br />
@@ -229,7 +229,7 @@
           <br />
           <h2 id="getting-started">Getting Started with the Fruitarian Diet</h2>
           <img
-            src="assets/fruit-plate.jpg"
+            src="assets/fruit-2.jpg"
             alt="Colorful plate with assorted fruits"
           />
           <br />
@@ -273,7 +273,7 @@
           <br />
           <h2 id="foods-you-can-eat">Foods You Can Eat on a Fruitarian Diet</h2>
           <img
-            src="assets/fruit-selection.jpg"
+            src="assets/fruit-3.jfif"
             alt="Assorted fruits for fruitarian diet"
           />
           <p>Enjoy these foods as staples in your fruitarian lifestyle:</p>
@@ -307,7 +307,7 @@
           <br />
           <h2 id="foods-to-limit">Foods to Limit or Avoid</h2>
           <img
-            src="assets/foods-to-limit.jpg"
+            src="assets/fruit-4.avif"
             alt="Foods to avoid on the fruitarian diet"
           />
           <p>
@@ -339,7 +339,7 @@
           <br />
           <h2 id="fun-tips">Fun Tips to Enjoy the Fruitarian Diet</h2>
           <img
-            src="assets/fruit-smoothies.jpg"
+            src="assets/fruit-5.jpg"
             alt="Assorted fruit smoothies"
           />
           <p>
