finishing Keto diet plan

--- a/fruitarian.html
+++ b/fruitarian.html
@@ -264,7 +264,7 @@
             <br />
             <li>
               5. <strong>Track Your Progress:</strong> Using an app like
-              NourishWise monitor your progression. Keep track of your energy
+              NourishWise, monitor your progression. Keep track of your energy
               levels, digestion, and overall well-being as you transition to
               this diet.
             </li>
