--- a/keto-article.html
+++ b/keto-article.html
@@ -152,7 +152,7 @@
             <h1>Keto Diet</h1>
             <br />
             <img
-              src="assets/keto-diet.jpg"
+              src="assets/keto-1.jpg"
               alt="A plate of low-carb foods suitable for a keto diet"
             />
             <h2>What is the Keto Diet?</h2>
@@ -190,7 +190,7 @@
           <br />
           <h2 id="how-it-works">How Does the Keto Diet Work?</h2>
           <img
-            src="assets/keto-food-pyramid.jpg"
+            src="assets/Keto-Diet.jpg"
             alt="Keto diet food pyramid illustration"
           />
           <br />
@@ -214,7 +214,7 @@
           <br />
           <h2 id="getting-started">Getting Started with the Keto Diet</h2>
           <img
-            src="assets/keto-meal.jpg"
+            src="assets/keto-2.jpeg"
             alt="A well-balanced keto meal with healthy fats"
           />
           <br />
@@ -238,8 +238,8 @@
             <br />
             <li>
               3. <strong>Track Your Carbs:</strong> Monitoring your carb intake
-              is vital to achieving and maintaining ketosis. Consider using a
-              keto tracking app for convenience.
+              is vital to achieving and maintaining ketosis. Consider using
+              NourishWise for convenience.
             </li>
             <br />
             <li>
@@ -252,7 +252,7 @@
           <br />
           <h2 id="foods-you-can-eat">Foods You Can Eat on a Keto Diet</h2>
           <img
-            src="assets/keto-approved-foods.jpg"
+            src="assets/keto-3.webp"
             alt="Various foods suitable for the keto diet"
           />
           <p>Here are staple foods for your keto journey:</p>
@@ -287,7 +287,7 @@
           <br />
           <h2 id="foods-to-limit">Foods to Limit or Avoid</h2>
           <img
-            src="assets/foods-to-avoid.jpg"
+            src="assets/keto-4.png"
             alt="Foods to avoid on the keto diet"
           />
           <p>To stay in ketosis, it’s essential to avoid the following:</p>
@@ -317,7 +317,7 @@
           <br />
           <h2 id="fun-tips">Fun Tips to Enjoy the Keto Diet</h2>
           <img
-            src="assets/keto-snacks.jpg"
+            src="assets/keto-5.jfif"
             alt="Assorted keto-friendly snacks"
           />
           <p>Make the keto journey more enjoyable with these tips:</p>
