finishing Mediterranean diet plan

--- a/mediterranean-article.html
+++ b/mediterranean-article.html
@@ -153,7 +153,7 @@
             <h1>Mediterranean Diet</h1>
             <br />
             <img
-              src="assets/mediterranean-diet.jpg"
+              src="assets/mediterranean-1.jpg"
               alt="A colorful assortment of Mediterranean foods including vegetables, fish, and olive oil"
             />
             <h2>What is the Mediterranean Diet?</h2>
@@ -192,7 +192,7 @@
           <br />
           <h2 id="how-it-works">How Does the Mediterranean Diet Work?</h2>
           <img
-            src="assets/mediterranean-pyramid.jpg"
+            src="assets/mediterranean-2.jpg"
             alt="Mediterranean food pyramid illustration"
           />
           <br />
@@ -217,7 +217,7 @@
             Getting Started with the Mediterranean Diet
           </h2>
           <img
-            src="assets/mediterranean-plate.jpg"
+            src="assets/mediterranean-3.jfif"
             alt="Plate with Mediterranean-inspired ingredients like olives, fish, and vegetables"
           />
           <br />
@@ -263,7 +263,7 @@
             Foods You Can Eat on the Mediterranean Diet
           </h2>
           <img
-            src="assets/mediterranean-selection.jpg"
+            src="assets/mediterranean-4.webp"
             alt="Selection of Mediterranean diet foods including grains, vegetables, and olive oil"
           />
           <p>Enjoy these staples in your Mediterranean-inspired meals:</p>
@@ -297,7 +297,7 @@
           <br />
           <h2 id="foods-to-limit">Foods to Limit or Avoid</h2>
           <img
-            src="assets/foods-to-limit.jpg"
+            src="assets/mediterranean-5.jpg"
             alt="Foods to limit on the Mediterranean diet"
           />
           <p>
@@ -329,7 +329,7 @@
           <br />
           <h2 id="fun-tips">Fun Tips to Enjoy the Mediterranean Diet</h2>
           <img
-            src="assets/mediterranean-dishes.jpg"
+            src="assets/mediterranean-6.PNG"
             alt="Assortment of Mediterranean-inspired dishes"
           />
           <p>
@@ -344,7 +344,8 @@
             <br />
             <li>
               2. <strong>Make Homemade Snacks:</strong> Enjoy olives, nuts, and
-              fresh fruit as nutritious snacks.
+              fresh fruit as nutritious snacks or look up healthy snack recipes
+              to satisfy your munchies.
             </li>
             <br />
             <li>
