--- a/diet-plan.html
+++ b/diet-plan.html
@@ -155,7 +155,7 @@
           <!-- Diet Plan card -->
           <div class="dietPlan-card">
             <div class="img">
-              <img src="assets/Mediterranean-diet.jpeg" alt="" />
+              <img src="assets/mediterranean-diet.jfif" alt="" />
             </div>
             <div class="text">
               <h3>Mediterranean Diet</h3>
