--- a/vegan-article.html
+++ b/vegan-article.html
@@ -191,10 +191,7 @@
           <br />
           <br />
           <h2 id="how-it-works">How Does the Vegan Diet Work?</h2>
-          <img
-            src="assets/vegan-pyramid.jfif"
-            alt="Vegan food pyramid illustration"
-          />
+          <img src="assets/vegan-1.jpg" alt="Vegan food pyramid illustration" />
           <br />
           <p>
             The vegan diet centers around whole plant foods. Vegans typically
@@ -215,10 +212,7 @@
           <br />
           <br />
           <h2 id="getting-started">Getting Started with the Vegan Diet</h2>
-          <img
-            src="assets/vegan-meal.jpg"
-            alt="Assorted vegan meals on a table"
-          />
+          <img src="assets/vegan-2.jpg" alt="Assorted vegan meals on a table" />
           <br />
           <p>Transitioning to a vegan diet can be simple with these steps:</p>
           <ul>
@@ -252,10 +246,7 @@
           <br />
           <br />
           <h2 id="foods-you-can-eat">Foods You Can Eat on a Vegan Diet</h2>
-          <img
-            src="assets/vegan-food-selection.jpg"
-            alt="Assorted plant-based foods"
-          />
+          <img src="assets/vegan-3.webp" alt="Assorted plant-based foods" />
           <p>Here are staples you can enjoy on a vegan diet:</p>
           <ul>
             <br />
@@ -286,10 +277,7 @@
           <br />
           <br />
           <h2 id="foods-to-limit">Foods to Limit or Avoid</h2>
-          <img
-            src="assets/foods-to-limit.jpg"
-            alt="Foods to avoid on a vegan diet"
-          />
+          <img src="assets/vegan-4.jpg" alt="Foods to avoid on a vegan diet" />
           <p>For a complete vegan diet, avoid these foods:</p>
           <ul>
             <br />
@@ -306,12 +294,23 @@
               3. <strong>Honey:</strong> Some vegans choose to avoid honey as it
               is animal-derived.
             </li>
+            <br />
+            <li>
+              3. <strong>Gelatin:</strong> Often used in candies, marshmallows,
+              and jellies, gelatin is derived from animal collagen.
+            </li>
+            <br />
+            <li>
+              3. <strong>Chocolate with Milk Solids:</strong> Milk or milk fat
+              is often found in milk chocolate, and some dark chocolates as
+              well, so look for vegan-certified chocolates.
+            </li>
           </ul>
           <br />
           <br />
           <h2 id="fun-tips">Fun Tips to Enjoy the Vegan Diet</h2>
           <img
-            src="assets/vegan-smoothies.jpg"
+            src="assets/vegan-6.PNG"
             alt="Assorted vegan smoothies"
           />
           <p>Add creativity and fun to your vegan journey with these tips:</p>
